  * debian/control.in dropped version check
      - debhelper (>= 7.0.50~)           (version 8      in stable)
      - pkg-config (>= 0.15)             (version 0.25   in stable)
      - autoconf (>= 2.59)               (version 2.67   in stable)
      - automake1.9 (>= 1.9.3)           (version 1.9.6  in stable)
      - libcurl4-openssl-dev (>= 7.17.1) (version 7.21.0 in stable)

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Wed, 17 Apr 2013 09:06:54 +0200

boinc (7.0.60+dfsg-1) UNRELEASED; urgency=low

  * New upstream release.
  * Disabling install checking_notes since not updated anymore

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Tue, 02 Apr 2013 18:38:43 +0200

boinc (7.0.59+dfsg-1) UNRELEASED; urgency=low

  * New upstream release.
  * New debian/watch file for upstream git switch.
  * changing cc_client.xml permissions to boinc:boinc
    from root:boinc (lp: #1162596)

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Thu, 28 Mar 2013 23:25:42 +0100

boinc (7.0.58+dfsg-1) UNRELEASED; urgency=low

  * New upstream release.
  * Fix arch detection in About dialog box.

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Fri, 22 Mar 2013 17:47:31 +0100

boinc (7.0.56+dfsg-1) UNRELEASED; urgency=low

  * New upstream release.
    - Fix for man pages (lp: #1140560) (Thanks Christian Beer)
    - Fix for xml parsing issues.
    - Fix in work fetch.
    - Fix issue in Milkyway@Home (fixed in .55 release)

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Wed, 13 Mar 2013 15:42:42 +0100

boinc (7.0.54+dfsg-1) UNRELEASED; urgency=low

  * New upstream release.
  * Dropped boincmgr_fix_long_pointers.patch accepted upstream.
  * New Patch disable_new_version_check.patch (lp: #1140597)
  * Dropped libssl0.9.8-dbg suggestion and added libssl1.0.0-dbg instead
    (Closes: #702741)

 -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Thu, 07 Mar 2013 17:06:38 +0100

boinc (7.0.53+dfsg-1) UNRELEASED; urgency=low
